[gd_scene load_steps=12 format=2]

[ext_resource path="res://gizmo/holo_box/holo_box.png" type="Texture" id=1]
[ext_resource path="res://decoration/sprites/stripe_small.png" type="Texture" id=2]
[ext_resource path="res://decoration/tiling_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/color_node.gd" type="Script" id=4]
[ext_resource path="res://gizmo/holo_box/holo_box.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float speed = 1.0;
uniform float rotation = 0.0;
uniform vec2 tile_factor = vec2(1.0, 1.0);
uniform sampler2D mask;

vec2 rotate_uv(vec2 uv, vec2 pivot, float rot) {
    float sine = sin(rot);
    float cosine = cos(rot);

    uv -= pivot;
	float new_x = uv.x * cosine - uv.y * sine;
	float new_y = uv.x * sine + uv.y * cosine;
    uv.x = new_x;
    uv.y = new_y;
    uv += pivot;

    return uv;
}

void fragment() {
	vec2 tiled_uv = rotate_uv(UV * tile_factor, vec2(0.5), rotation);
	COLOR = texture(TEXTURE, tiled_uv + vec2(0.0, TIME * speed));
	COLOR.a *= texture(mask, UV).a;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/speed = 1.5
shader_param/rotation = 0.785
shader_param/tile_factor = Vector2( 7.36736, 7.53586 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 68, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 60 )

[sub_resource type="Animation" id=5]
resource_name = "deactivate"
length = 0.8
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_collision_active"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, -2.0, 2.0, -2.0, 2.0, -2.0, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.46, 0.46 ), Vector2( 0.7, 0.7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "reactivate"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_collision_active"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.594604, 0.5 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HoloBox" type="Area2D" groups=[
"holo_box",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.533333, 0.533333 )
texture = ExtResource( 1 )

[node name="ColorNode" type="Node2D" parent="."]
script = ExtResource( 4 )
layer = 2

[node name="TilingSprite" parent="ColorNode" instance=ExtResource( 3 )]
material = SubResource( 2 )
scale = Vector2( 7.36736, 7.53586 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="StaticBody" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/deactivate = SubResource( 5 )
anims/reactivate = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_exited" from="." to="." method="body_exited"]
[connection signal="timeout" from="Timer" to="." method="timer_timeout"]
